# motif-hand-software-modules

./: .gitignore  README.md  pyproject.toml  setup.py
src/MOTIFHand/LEAPHand_data_collector/: Usage.md  hand_ros_flick_recorder.py  hand_ros_flick_test.py
src/MOTIFHand/raspi_data_collector/: Usage.md  sensor_collector_server_raspi.py  sensor_collector_standalone_raspi.py
src/MOTIFHand/utils/arm_control/: Usage.md  xarm_api_test.py
src/MOTIFHand/utils/arm_control/xarm7/arm_client/: arm_data_collector.py  arm_play_trajs.py  arm_record_trajs.py  client.py  ros2_server.py
src/MOTIFHand/utils/pcb_data/: acc_recorder.py  data_loader.py  data_recorder.py
src/MOTIFHand/utils/sensor_postprocess/: AHRS.py  data_serial_handler.py
src/MOTIFHand/utils/sensor_read/: Lepton35-UVC.py  Lepton35.py  MLX90640.py  ToF.py  camera.py  realsensed405.py  uvctypes.py
src/MOTIFHand/visualizer/: IMU_data_viz.py  tactile_visualizer.py
src/MOTIFHand/visualizer/assets/: leap_lh.xml  leap_lh_tactile.xml  leap_rh_tactile.xml  motion_params.json  scene_left.xml  scene_right.xml
src/MOTIFHand/visualizer/data_handler/: __init__.py  ahrs_data_processor.py  ahrs_example.py  sensor_serial_handler.py  test_data_generator.py
